syntax = "proto2";

import "protobuf/common.proto";
import "protobuf/transaction.proto";

package protobuf;

message BlockHeader {
    required uint32 version = 1;
    required uint32 height = 2;
    required int64 time = 3;
    required uint32 nounce = 4;
    required uint32 difficulty = 5;

    required Hash prev = 6;
    required Hash txRoot = 7;
    required Hash status = 8;

    optional Signature sign = 9;
    optional bytes data = 10;
}

message Block {
    required BlockHeader header = 1;
    required Transactions txList = 2;
}

message Blocks {
    repeated Block  block = 1;
}